<?xml version="1.0"?>
<package>
  <name>jaco_description</name>
  <version>0.1.0</version>
  <description>Models for Jaco</description>

  <maintainer email="hejiazha@usc.edu">Hejia Zhang</maintainer>

  <license>BSD</license>

  <author email="hejiazha@usc.edu">Hejia Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
